zebra-state/src/service/finalized_state/disk_format/tests/snapshots/transparent_addr_by_balance_raw_data@testnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000000000000927cfc1088a0e06680edd5f9d000e5d28bbc542e0639bd",
    v: "",
  ),
]
