zebra-state/src/service/finalized_state/disk_format/tests/snapshots/transparent_tx_balance_by_addr_loc_raw_data@mainnet_1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "00000100000000010000010000",
    v: "00000000000030d40000000000000000",
  ),
]
